--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.8",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
     "web-vitals": "^2.1.4"
